Fix focus and focus-visible states for main site skip link in dark mode.

--- a/astro/src/styles/link-focus-hover.scss
+++ b/astro/src/styles/link-focus-hover.scss
@@ -114,6 +114,12 @@ a {
   }
 }
 @include color-mode(dark) {
+  #main-skip-link:focus-visible {
+      outline-color: white;
+  }
+  #main-skip-link:not(:hover) {
+      background-color: white;
+  }
   // Global mode to switch buttons to a nice contrast in dark mode
   .btn.btn-contrast-dark {
     --bs-btn-color: var(--bs-primary);
